using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace theMovies.Model
{
    public static class SqlCon
    {
        public static string ConnectionString { get; } 
        = "Server=10.56.8.36;Database=DB_F23_09;User Id=DB_F23_USER_09;Password=OPENDB_09";
    }
}
